--- a/01.RECOIL.7L.INSTALL/Settings.DL.ini
+++ b/01.RECOIL.7L.INSTALL/Settings.DL.ini
@@ -1,5 +1,6 @@
 []{
 ;Settings.. DELAX... by Kia7L
+;It tells the game to trick it out...
 {
 float HighUp=2;(1-10:GunFireRaised)
 float LowDown=5;(1-10:GunRecoiledGripStraitCompansate)
