Ive made a dizzy greater than mistake

--- a/01.RECOIL.7L.INSTALL/DELAX.ini
+++ b/01.RECOIL.7L.INSTALL/DELAX.ini
@@ -4,7 +4,7 @@ float FOXTROT
 ;Reset VR Testing... Smooth... by Kia7L
 {
 PAUSE.SLEEP.TIMEOUT.REST.RESET.POSITION.FREQUENYTLY.CONTROLLER.CALIBRATION=DELAX
-float DELAX=11[<NUL]*0 1111
+float DELAX=11[>NUL]*0 1111
 return=DELAX
 }
 ;RECOIL FIX... Great... by Kia7L
