--- a/01.RECOIL.7L/DELAX - PAVLOV.ini
+++ b/01.RECOIL.7L/DELAX - PAVLOV.ini
@@ -1,16 +1,15 @@
 []{
-float DELAX
-float FOXTROT
-;Reset VR Testing... Smooth... by Kia7L
-{
-PAUSE.SLEEP.TIMEOUT.REST.RESET.POSITION.FREQUENYTLY.CONTROLLER.CALIBRATION=DELAX
-float DELAX=11[>NUL]*0 1111
-return=DELAX
-}
+float PAVLOV
 ;RECOIL FIX... Great... by Kia7L
 {
-RECOIL.SHOT.FIRE.TRIGGER=FOXTROT
-float FOXTROT=(0.1HighUp>[@]<-3.LowDown) 1111
-return=FOXTROT
+RECOIL.SHOT.FIRE.TRIGGER.PAVLOV=PAVLOV
+float PAVLOV=(0.1HighUp>[@]<-3.LowDown) 1111
+return=PAVLOV
 }
+{
+float4 killscreen1=(float2(xx,yy),float2(xx,yy))
+float4 killscreen2=Pavlov.BestPlayer.KillCam.End.Finish.Done.Game|killscreen1 -90,0
+return=killscree2
 }
+
+
