--- a/01.RECOIL.7L/DELAX - SQUAD.ini
+++ b/01.RECOIL.7L/DELAX - SQUAD.ini
@@ -1,16 +1,9 @@
 []{
-float DELAX
-float FOXTROT
-;Reset VR Testing... Smooth... by Kia7L
-{
-PAUSE.SLEEP.TIMEOUT.REST.RESET.POSITION.FREQUENYTLY.CONTROLLER.CALIBRATION=DELAX
-float DELAX=11[>NUL]*0 1111
-return=DELAX
-}
+float SQUAD
 ;RECOIL FIX... Great... by Kia7L
 {
-RECOIL.SHOT.FIRE.TRIGGER=FOXTROT
-float FOXTROT=(0.1HighUp>[@]<-3.LowDown) 1111
-return=FOXTROT
+RECOIL.SHOT.FIRE.TRIGGER.SQUAD=SQUAD
+float SQUAD=(0.1HighUp>[@]<-3.LowDown) 1111
+return=SQUAD
 }
-}
+
