--- a/01.RECOIL.7L/DELAX - STANDOUT.ini
+++ b/01.RECOIL.7L/DELAX - STANDOUT.ini
@@ -1,16 +1,9 @@
 []{
-float DELAX
-float FOXTROT
-;Reset VR Testing... Smooth... by Kia7L
-{
-PAUSE.SLEEP.TIMEOUT.REST.RESET.POSITION.FREQUENYTLY.CONTROLLER.CALIBRATION=DELAX
-float DELAX=11[>NUL]*0 1111
-return=DELAX
-}
+float STANDOUT
 ;RECOIL FIX... Great... by Kia7L
 {
-RECOIL.SHOT.FIRE.TRIGGER=FOXTROT
-float FOXTROT=(0.0HighUp>[@]<-4.LowDown) 1111
-return=FOXTROT
+RECOIL.SHOT.FIRE.TRIGGER.STANDOUT=STANDOUT
+float STANDOUT=(0.0HighUp>[@]<-4.LowDown) 1111
+return=STANDOUT
 }
-}
+
