--- a/01.RECOIL.7L/DELAX.ini
+++ b/01.RECOIL.7L/DELAX.ini
@@ -3,7 +3,7 @@ float FOX
 ;RECOIL FIX... Great... by Kia7L
 {
 RECOIL.SHOT.FIRE.TRIGGER=FOX
-float FOX=(0.0HighUp+[@]<-5.LowDown) 1111
+float FOX=(0.0HighUp+<-5.LowDown) 1111
 return=FOX
 }
 
