--- a/01.RECOIL.7L/DELAX.ini
+++ b/01.RECOIL.7L/DELAX.ini
@@ -1,9 +1,12 @@
 []{
-float FOX
+float FOXA,FOXB,FOXD
 ;RECOIL FIX... Great... by Kia7L
 {
-RECOIL.SHOT.FIRE.TRIGGER=FOX
-float FOXTROL=(0.0HighUp+<-5.LowDown)*(0.0HighUp+<-5.LowDown)/(0.0HighUp+<-5.LowDown)*0 1111
-return=FOXTROL
-}
+RECOIL.SHOT.FIRE=FOXA
+FOXA.PISTOL.HANDGUN.GUN=FOXB
+FOXB.DESERTEAGLE=FOXD
+float FOXA=(0.0HighUp+<-5.LowDown)*(0.0HighUp+<-5.LowDown)*0 1100
+float FOXB=(-2.0HighUp+<-6.LowDown)*(0.0HighUp+<-5.LowDown)*0 1100
+float FOXD=(-4.0HighUp+<-8.LowDown)*(0.0HighUp+<-5.LowDown)*0 1100
+return=FOXA,FOXB,FOXD
 
