--- a/02.RETROSPECT-Choose One/RETR0.DrudgeDred.ini
+++ b/02.RETROSPECT-Choose One/RETR0.DrudgeDred.ini
@@ -1,12 +1,14 @@
 []{
-float FOXA,FOXB,FOXD
+float JudgeA,JudgeB,JudgeD,JudgeE,JudgeF
 ;RECOIL FIX... Great... by Kia7L
 {
-RECOIL.SHOT.FIRE=FOXA
-FOXA.PISTOL.HANDGUN.GUN=FOXB
-FOXB.DESERTEAGLE=FOXD
-float FOXA=(0.0HighUp+<-5.LowDown)*(0.0HighUp+<-5.LowDown)*0 1100
-float FOXB=(-2.0HighUp+<-6.LowDown)*(0.0HighUp+<-5.LowDown)*0 1100
-float FOXD=(-4.0HighUp+<-8.LowDown)*(0.0HighUp+<-5.LowDown)*0 1100
-return=FOXA,FOXB,FOXD
+RECOIL.SHOT.FIRE=JudgeA
+JudgeA.PISTOL.HANDGUN.GUN=JudgeB
+JudgeB.DESERTEAGLE=JudgeD
+float JudgeA=(0.0HighUp+<-5.LowDown)*(0.0HighUp+<-5.LowDown)*0 1100
+float JudgeB=(-2.0HighUp+<-6.LowDown)*(0.0HighUp+<-5.LowDown)*0 1100
+float JudgeD=(-4.0HighUp+<-9.LowDown)*(0.0HighUp+<-5.LowDown)*0 1100
+float JudgeE=((float P0=-100)*2)
+float JudgeF=((float P1=-1)*2)
+return=JudgeA,JudgeB,JudgeD,JudgeE,JudgeF
 
