--- a/01.RECOIL.7L/DELAX.ini
+++ b/01.RECOIL.7L/DELAX.ini
@@ -5,8 +5,8 @@ float FOXA,FOXB,FOXD
 RECOIL.SHOT.FIRE=FOXA
 FOXA.PISTOL.HANDGUN.GUN=FOXB
 FOXB.DESERTEAGLE=FOXD
-float FOXA=(0.0HighUp+<-5.LowDown)*(0.0HighUp+<-5.LowDown)*0 1100
-float FOXB=(-2.0HighUp+<-6.LowDown)*(0.0HighUp+<-5.LowDown)*0 1100
-float FOXD=(-4.0HighUp+<-8.LowDown)*(0.0HighUp+<-5.LowDown)*0 1100
+float FOXA=(0.0HighUp+<-5.LowDown)*2*0 1100
+float FOXB=(-3.0HighUp+<-6.LowDown)*2*0 1100
+float FOXD=(-6.0HighUp+<-8.LowDown)*2*0 1100
 return=FOXA,FOXB,FOXD
 
